--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       -name: Check out the repo
        uses: actions/checkout@v3
-
+       
       -name: Login to Docker Hub
        uses: docker/login-actio@v3
        with:
          username: ${{ secrets.DOCKER_USERNAME }}
-         password: ${{ secrets.DOCKER_PASSWORD }}
+         password: ${{ secrets.DOCKER_TOKEN }}
