--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: sewook/ml-base:latest
+          tags: sewookwee/ml-base:latest
